add run git log command to compare branch
Signed-off-by: Mamh-Linux <bright.ma@mage.com>